--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>aircompany</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
@@ -14,7 +15,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.0.0-beta1</version>
+            <version>7.4.0</version>
         </dependency>
     </dependencies>
 </project>
